--- a/src/app/components/tarjetas/tarjetas.component.html
+++ b/src/app/components/tarjetas/tarjetas.component.html
@@ -1,5 +1,6 @@
 <div class="card-columns m-5 animated fadeIn">
-    <div class="card" *ngFor="let item of items; let i=index">
+
+    <div (click)="verArtista( item )" class="card puntero" *ngFor="let item of items; let i=index">
         <img [src]="item.images | noimage" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">{{ item.name }}</h5>
@@ -10,4 +11,5 @@
             </p>
         </div>
     </div>
+
 </div>
